# shakespeareGPT

./: .gitignore  README.md  gpt_dev.ipynb  pyproject.toml  requirements.txt
src/gpt_shakespeare/: __init__.py  bigram.py  generate_samples.py  gpt.py  train.py  v2.py
