[project]
name = "gpt-shakespeare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "mypy>=1.11.1",
    "tdqm>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
